# aws-timestream

./: .gitignore  Cargo.toml  README.md
src/: discovery.rs  error.rs  lib.rs  timestream.rs
