[package]
name = "aws-timestream"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-signing-request = { git = "https://git@github.com/glistman/aws-signing-request.git", tag = "v0.0.1" }
reqwest =  { version = "0.11.6", features =["json"]}
chrono = { version = "0.4.19", features =["serde"]}
serde = { version ="1.0.126", features = ["rc", "derive"]}
serde_json = "1.0.59"
tokio = { version = "1.12.0", features = ["full"] }
rand = "0.8.4"