[package]
name = "aws-timestream"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-signing-request = { git = "https://git@github.com/glistman/aws-signing-request.git", tag = "v0.0.5" }
aws-credentials = { git = "https://git@github.com/glistman/aws-credentials.git", tag = "v0.0.5" }
reqwest =  { version = "0.11.8", features =["json"]}
chrono = { version = "0.4.19", features =["serde"]}
serde = { version ="1.0.133", features = ["rc", "derive"]}
serde_json = "1.0.74"
tokio = { version = "1.15.0", features = ["full"] }
rand = "0.8.4"
log = "0.4.14"
env_logger = "0.9.0"


[dev-dependencies]
test-log = "0.2.8"
